--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
   <br><br>
   <input type="text" name="email" id="" placeholder="Email address"><br>
   <label for="email">Email</label><br><br>
-  <input type="text" name="password" id="" placeholder="Password"><br>
+  <input type="password" name="password" id="" placeholder="Password"><br>
   <label for="password">Password</label><br>
   
 
@@ -23,11 +23,11 @@
   </div>
 
   <!-- Submit button -->
-  <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+  <button type="button" class="btn btn-primary btn-block mb-4" href="#!">Sign in</button>
 
   <!-- Register buttons -->
   <div class="text-center">
-    <p>Not a member? <a href="#!">Register</a></p>
+    <p>Not a member? <a href="#!">Register </a></p>
 
   </div>
 </div>
